--- a/crud_lol/equipos_jugadores/templates/jugadores/jugadores.html
+++ b/crud_lol/equipos_jugadores/templates/jugadores/jugadores.html
@@ -23,7 +23,7 @@
                         <th>#</th>
                         <th scope="col">Usuario</th>
                         <th scope="col">Posición</th>
-                        <th scope="col">Estadisticas</th>
+                        <th scope="col" style="text-align:center;">Estadisticas</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
@@ -33,8 +33,12 @@
                         <th scope="row">{{ forloop.counter }}</th>
                         <td>{{j.usuario}}</td>
                         <td>{{j.posicion}}</td>
-                        <td><a href="https://las.op.gg/summoner/userName={{j.usuario}}"><img src="https://d1506sp6x4e9z7.cloudfront.net/gamasutra/uploads/1035771.png" width="30" alt=""></a></td>
-                        <td><a href="/detalle_jugador/{{j.id}}"><button type="button" class="btn btn-info">Info</button></a></td>
+                        <td style="text-align:center;"><a href="https://las.op.gg/summoner/userName={{j.usuario}}"><img src="https://d1506sp6x4e9z7.cloudfront.net/gamasutra/uploads/1035771.png" width="30" alt=""></a></td>
+                        <td style="text-align:center;">
+                            <a href="/detalle_jugador/{{j.id}}"><button type="button" class="btn btn-info">Info</button></a>
+                            <a href="/editar_jugador/{{j.id}}"><button type="button" class="btn btn-primary">Editar</button></a>
+                            <a href="/borrar_jugador/{{j.id}}"><button type="button" class="btn btn-danger">Borrar</button></a>
+                        </td>
                     </tr>
                   {% endfor %}
                 </tbody>
